Code refactoring+Adding Appicon+Changing Theme Color

--- a/PersonalExpenseTracker/Base.lproj/Main.storyboard
+++ b/PersonalExpenseTracker/Base.lproj/Main.storyboard
@@ -637,7 +637,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" systemColor="systemPurpleColor"/>
+                        <color key="tintColor" systemColor="systemRedColor"/>
                         <color key="barTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" systemColor="systemRedColor"/>
                     </tabBar>
                     <connections>
                         <segue destination="CA7-YN-SSr" kind="relationship" relationship="viewControllers" id="P5c-g3-vjz"/>
